syntax = "proto3";
package qbtc.qbtc.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/btcq-org/qbtc/x/qbtc/types";

// MsgSetNodePeerAddress allows authorized validators to update their node peer
// address.
message MsgSetNodePeerAddress {
  option (cosmos.msg.v1.signer) = "signer";
  option (amino.name) = "qbtc/MsgSetNodePeerAddress";

  string peer_address = 1 [ (gogoproto.customname) = "PeerAddress" ];
  string signer = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}
